# budget-butler

./: components.json  drizzle.config.ts  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: build-linux-arm.yml  build.yml  main.yml
assets/: budget-butler.psd
environment/: apt_packages.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_new_morg.sql  0000_numerous_eddie_brock.sql
src-tauri/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
src-tauri/src/: db.rs  ipc.rs  lib.rs  main.rs  oauth.rs  structures.rs  utils.rs
src-tauri/src/consts/: auth.rs
src-tauri/src/db/: auth.rs  crud.rs  structures.rs  x_take_impl.rs
src-tauri/src/db/structures/: auth.rs  person.rs
src-tauri/src/ipc/: commands.rs  structures.rs
src-tauri/src/ipc/structures/: error.rs
src-tauri/src/utils/: try_froms.rs  x_take.rs
src/lib/auth/: login-signin.ts  login.ts  supabaseClient.ts  types.ts
src/lib/components/: Logo.svelte  SplashScreen.svelte
src/lib/components/auth/: SignupCard.svelte
src/lib/datas/: introduction.ts
src/lib/db/: database.ts  migrate.ts  schema.ts  schemas.ts
src/lib/utils/: config.ts  cookies-localst.ts  cookies.ts  data.ts  icons.ts  routes.ts  routing.ts  tailwindGroups.ts  types.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(auth)/: +layout.ts  +page.svelte
src/routes/app/: +layout.svelte  +layout.ts  +page.svelte
src/routes/intro/: +page.svelte
src/routes/signup/: +page.svelte  +page.ts
src/stores/: auth.ts  store.ts
(+42 files in other folders)
